deploy/04_service.yaml
# Service
apiVersion: v1
kind: Service
metadata:
  name: hpe-dps
  namespace: hpe-dps
  labels:
    app: hpe-dps
spec:
  selector:
    app: hpe-dps
  type: ClusterIP
  ports:
  - name: hpe-dps-web
    protocol: TCP
    port: 80
    targetPort: hpe-dps-web
